--- a/index.html
+++ b/index.html
@@ -1,198 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Visionary</title>
-  <style>
-    :root {
-      --primary: #2a2a72;
-      --accent: #00c9a7;
-      --light: #f5f5f5;
-      --dark: #1a1a1a;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cosmic Journey Showcase</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+        body {
+            background: linear-gradient(180deg, #0a0a2a, #1a1a4a);
+            color: #fff;
+            overflow-x: hidden;
+        }
 
-    html, body {
-      font-family: 'Helvetica Neue', sans-serif;
-      background: var(--light);
-      color: var(--dark);
-      line-height: 1.6;
-      scroll-behavior: smooth;
-    }
+        /* Starry Background */
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            z-index: -1;
+            animation: twinkle 5s infinite;
+        }
 
-    header {
-      background: linear-gradient(to right, var(--primary), #4b6cb7);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
+        .stars::before {
+            content: '';
+            position: absolute;
+            width: 2px;
+            height: 2px;
+            background: white;
+            box-shadow: 100px 200px #fff, 300px 50px #fff, 500px 300px #fff, 700px 100px #fff, 
+                        200px 400px #fff, 400px 600px #fff, 600px 200px #fff, 800px 500px #fff;
+            animation: twinkle 3s infinite;
+        }
 
-    header h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
+        @keyframes twinkle {
+            0%, 100% { opacity: 0.3; }
+            50% { opacity: 1; }
+        }
 
-    header p {
-      font-size: 1.2em;
-    }
+        /* Navigation */
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 10;
+        }
 
-    nav {
-      background: white;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 1.2em;
+            transition: color 0.3s, transform 0.3s;
+        }
 
-    nav a {
-      color: var(--primary);
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: bold;
-      position: relative;
-    }
+        nav a:hover {
+            color: #00ffcc;
+            transform: scale(1.1);
+        }
 
-    nav a::after {
-      content: '';
-      display: block;
-      height: 2px;
-      background: var(--accent);
-      width: 0;
-      transition: width 0.3s;
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-    }
+        /* Sections */
+        section {
+            height: 100vh;
+            padding: 80px 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            scroll-snap-align: start;
+        }
 
-    nav a:hover::after {
-      width: 100%;
-    }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+        }
 
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
+        p {
+            font-size: 1.2em;
+            max-width: 600px;
+            line-height: 1.6;
+        }
 
-    section h2 {
-      color: var(--primary);
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
+        /* Home Section */
+        #home {
+            background: linear-gradient(45deg, #1a1a4a, #ff00cc);
+            position: relative;
+        }
 
-    .svg-showcase {
-      text-align: center;
-      margin-top: 40px;
-    }
+        #home h1 {
+            animation: glow 2s ease-in-out infinite alternate;
+        }
 
-    .svg-showcase svg {
-      max-width: 100%;
-      height: auto;
-    }
+        @keyframes glow {
+            from { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #ff00cc; }
+            to { text-shadow: 0 0 20px #00ffcc, 0 0 30px #ff00cc, 0 0 40px #ff00cc; }
+        }
 
-    .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-      padding: 30px;
-      margin-bottom: 40px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+        /* About Section */
+        #about {
+            background: rgba(10, 10, 42, 0.8);
+        }
 
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 25px rgba(0,0,0,0.1);
-    }
+        /* Gallery Section */
+        #gallery {
+            background: linear-gradient(45deg, #1a1a4a, #00ffcc);
+        }
 
-    footer {
-      background: var(--primary);
-      color: white;
-      text-align: center;
-      padding: 30px 20px;
-      margin-top: 40px;
-    }
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
 
-    @media (max-width: 768px) {
-      header h1 {
-        font-size: 2em;
-      }
-      nav {
-        flex-direction: column;
-        gap: 10px;
-      }
-    }
-  </style>
+        .gallery-item {
+            width: 200px;
+            height: 200px;
+            background: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 20px #00ffcc;
+        }
+
+        /* Features Section */
+        #features {
+            background: rgba(10, 10, 42, 0.8);
+        }
+
+        .feature-box {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            margin: 10px;
+            border-radius: 10px;
+            transition: transform 0.3s, background 0.3s;
+        }
+
+        .feature-box:hover {
+            transform: translateY(-10px);
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Contact Section */
+        #contact {
+            background: linear-gradient(45deg, #ff00cc, #1a1a4a);
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        input, textarea {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.8);
+            color: #0a0a2a;
+        }
+
+        button {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background: #00ffcc;
+            color: #0a0a2a;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background 0.3s, transform 0.3s;
+        }
+
+        button:hover {
+            background: #ff00cc;
+            transform: scale(1.05);
+        }
+
+        /* Scroll Snap */
+        html {
+            scroll-snap-type: y mandatory;
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 <body>
+    <div class="stars"></div>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#features">Features</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-  <header>
-    <h1>Visionary</h1>
-    <p>Crafting high-impact digital experiences with HTML5, CSS3 & SVG</p>
-  </header>
+    <section id="home">
+        <h1>Welcome to the Cosmic Journey</h1>
+        <p>Embark on a stellar adventure through the universe, filled with wonder and discovery!</p>
+    </section>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#features">Features</a>
-    <a href="#svg">SVG Art</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <section id="about">
+        <h1>About the Cosmos</h1>
+        <p>Explore the mysteries of space, from distant galaxies to shimmering stars. Our journey takes you beyond the imaginable, with visuals and experiences that captivate.</p>
+    </section>
 
-  <section id="about">
-    <div class="card">
-      <h2>About</h2>
-      <p>This is a modern HTML5-based webpage, professionally styled with CSS3 and animated SVG. Perfect for portfolios, landing pages, or startup showcases — all fully mobile-optimised and built without frameworks.</p>
-    </div>
-  </section>
+    <section id="gallery">
+        <h1>Galactic Gallery</h1>
+        <p>Behold stunning cosmic visuals that bring the universe to life.</p>
+        <div class="gallery-grid">
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Nebula" alt="Nebula"></div>
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Galaxy" alt="Galaxy"></div>
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Stars" alt="Stars"></div>
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Planet" alt="Planet"></div>
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Black+Hole" alt="Black Hole"></div>
+            <div class="gallery-item"><img src="https://via.placeholder.com/200?text=Comet" alt="Comet"></div>
+        </div>
+    </section>
 
-  <section id="features">
-    <div class="card">
-      <h2>Features</h2>
-      <ul>
-        <li>✅ Mobile-first responsive design</li>
-        <li>✅ Clean HTML5 semantics</li>
-        <li>✅ Elegant CSS3 transitions and layout</li>
-        <li>✅ Built-in scalable SVG graphics</li>
-        <li>✅ Deployed entirely from iPhone</li>
-      </ul>
-    </div>
-  </section>
+    <section id="features">
+        <h1>Stellar Features</h1>
+        <p>Discover what makes this journey extraordinary.</p>
+        <div class="feature-box">
+            <h2>Interactivity</h2>
+            <p>Hover and click to explore dynamic elements.</p>
+        </div>
+        <div class="feature-box">
+            <h2>Visuals</h2>
+            <p>Glowing gradients and cosmic animations.</p>
+        </div>
+        <div class="feature-box">
+            <h2>Responsiveness</h2>
+            <p>Works on any device, from phones to desktops.</p>
+        </div>
+    </section>
 
-  <section id="svg">
-    <div class="card svg-showcase">
-      <h2>SVG Animation</h2>
-      <svg width="200" height="200" viewBox="0 0 100 100">
-        <circle cx="50" cy="50" r="40" stroke="#00c9a7" stroke-width="4" fill="none">
-          <animate attributeName="r" values="40;10;40" dur="3s" repeatCount="indefinite" />
-        </circle>
-        <circle cx="50" cy="50" r="6" fill="#00c9a7">
-          <animate attributeName="r" values="6;20;6" dur="2s" repeatCount="indefinite" />
-        </circle>
-      </svg>
-      <p>Dynamic, scalable vector graphics using inline SVG and animation.</p>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="card">
-      <h2>Contact</h2>
-      <p>To customise this page, connect your form service, or embed email logic.</p>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Visionary • Built with HTML5, CSS3, and SVG • Powered by iPhone
-  </footer>
-
+    <section id="contact">
+        <h1>Contact the Stars</h1>
+        <p>Reach out and join the cosmic conversation!</p>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit">Launch Message</button>
+        </form>
+    </section>
 </body>
 </html>
