--- a/index.html
+++ b/index.html
@@ -4,208 +4,273 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmic Journey Showcase</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
+   <style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Arial', sans-serif;
+    }
 
-        body {
-            background: linear-gradient(180deg, #0a0a2a, #1a1a4a);
-            color: #fff;
-            overflow-x: hidden;
-        }
+    body {
+        background: linear-gradient(180deg, #0a0a2a, #1a1a4a);
+        color: #fff;
+        overflow-x: hidden;
+    }
 
-        /* Starry Background */
-        .stars {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            z-index: -1;
-            animation: twinkle 5s infinite;
-        }
+    /* Starry Background */
+    .stars {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        z-index: -1;
+        animation: twinkle 5s infinite;
+    }
 
-        .stars::before {
-            content: '';
-            position: absolute;
-            width: 2px;
-            height: 2px;
-            background: white;
-            box-shadow: 100px 200px #fff, 300px 50px #fff, 500px 300px #fff, 700px 100px #fff, 
-                        200px 400px #fff, 400px 600px #fff, 600px 200px #fff, 800px 500px #fff;
-            animation: twinkle 3s infinite;
-        }
+    .stars::before {
+        content: '';
+        position: absolute;
+        width: 2px;
+        height: 2px;
+        background: white;
+        box-shadow: 100px 200px #fff, 300px 50px #fff, 500px 300px #fff, 700px 100px #fff, 
+                    200px 400px #fff, 400px 600px #fff, 600px 200px #fff, 800px 500px #fff;
+        animation: twinkle 3s infinite;
+    }
 
-        @keyframes twinkle {
-            0%, 100% { opacity: 0.3; }
-            50% { opacity: 1; }
-        }
+    @keyframes twinkle {
+        0%, 100% { opacity: 0.3; }
+        50% { opacity: 1; }
+    }
 
-        /* Navigation */
+    /* Navigation */
+    nav {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        padding: 15px;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 10;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        margin: 10px 15px;
+        font-size: 1.1em;
+        transition: color 0.3s, transform 0.3s;
+    }
+
+    nav a:hover {
+        color: #00ffcc;
+        transform: scale(1.1);
+    }
+
+    /* Sections */
+    section {
+        height: 100vh;
+        padding: 60px 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        scroll-snap-align: start;
+    }
+
+    h1 {
+        font-size: 2.5em;
+        margin-bottom: 15px;
+        text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+    }
+
+    p {
+        font-size: 1em;
+        max-width: 90%;
+        line-height: 1.6;
+    }
+
+    /* Home Section */
+    #home {
+        background: linear-gradient(45deg, #1a1a4a, #ff00cc);
+        position: relative;
+    }
+
+    #home h1 {
+        animation: glow 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+        from { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #ff00cc; }
+        to { text-shadow: 0 0 20px #00ffcc, 0 0 30px #ff00cc, 0 0 40px #ff00cc; }
+    }
+
+    /* About Section */
+    #about {
+        background: rgba(10, 10, 42, 0.8);
+    }
+
+    /* Gallery Section */
+    #gallery {
+        background: linear-gradient(45deg, #1a1a4a, #00ffcc);
+    }
+
+    .gallery-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15px;
+        margin-top: 15px;
+        width: 90%;
+        max-width: 800px;
+    }
+
+    .gallery-item {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        background: #fff;
+        border-radius: 10px;
+        overflow: hidden;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .gallery-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .gallery-item:hover {
+        transform: scale(1.1);
+        box-shadow: 0 0 20px #00ffcc;
+    }
+
+    /* Features Section */
+    #features {
+        background: rgba(10, 10, 42, 0.8);
+    }
+
+    .feature-box {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 15px;
+        margin: 10px;
+        border-radius: 10px;
+        transition: transform 0.3s, background 0.3s;
+        width: 90%;
+        max-width: 300px;
+    }
+
+    .feature-box:hover {
+        transform: translateY(-10px);
+        background: rgba(255, 255, 255, 0.2);
+    }
+
+    /* Contact Section */
+    #contact {
+        background: linear-gradient(45deg, #ff00cc, #1a1a4a);
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 90%;
+        width: 100%;
+        max-width: 350px;
+    }
+
+    input, textarea {
+        padding: 8px;
+        border: none;
+        border-radius: 5px;
+        background: rgba(255, 255, 255, 0.8);
+        color: #0a0a2a;
+    }
+
+    button {
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background: #00ffcc;
+        color: #0a0a2a;
+        font-size: 1em;
+        cursor: pointer;
+        transition: background 0.3s, transform 0.3s;
+    }
+
+    button:hover {
+        background: #ff00cc;
+        transform: scale(1.05);
+    }
+
+    /* Scroll Snap */
+    html {
+        scroll-snap-type: y mandatory;
+        scroll-behavior: smooth;
+    }
+
+    /* Responsive Design for iPhone and Small Screens */
+    @media (max-width: 600px) {
         nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 10;
+            padding: 10px;
         }
 
         nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 1.2em;
-            transition: color 0.3s, transform 0.3s;
+            margin: 5px 10px;
+            font-size: 0.9em;
         }
 
-        nav a:hover {
-            color: #00ffcc;
-            transform: scale(1.1);
-        }
-
-        /* Sections */
         section {
-            height: 100vh;
-            padding: 80px 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            scroll-snap-align: start;
+            padding: 50px 10px;
         }
 
         h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+            font-size: 1.8em;
         }
 
         p {
-            font-size: 1.2em;
-            max-width: 600px;
-            line-height: 1.6;
-        }
-
-        /* Home Section */
-        #home {
-            background: linear-gradient(45deg, #1a1a4a, #ff00cc);
-            position: relative;
-        }
-
-        #home h1 {
-            animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #ff00cc; }
-            to { text-shadow: 0 0 20px #00ffcc, 0 0 30px #ff00cc, 0 0 40px #ff00cc; }
-        }
-
-        /* About Section */
-        #about {
-            background: rgba(10, 10, 42, 0.8);
-        }
-
-        /* Gallery Section */
-        #gallery {
-            background: linear-gradient(45deg, #1a1a4a, #00ffcc);
+            font-size: 0.9em;
         }
 
         .gallery-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            margin-top: 20px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
         }
 
         .gallery-item {
-            width: 200px;
-            height: 200px;
-            background: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .gallery-item img {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .gallery-item:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 20px #00ffcc;
-        }
-
-        /* Features Section */
-        #features {
-            background: rgba(10, 10, 42, 0.8);
         }
 
         .feature-box {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            margin: 10px;
-            border-radius: 10px;
-            transition: transform 0.3s, background 0.3s;
-        }
-
-        .feature-box:hover {
-            transform: translateY(-10px);
-            background: rgba(255, 255, 255, 0.2);
-        }
-
-        /* Contact Section */
-        #contact {
-            background: linear-gradient(45deg, #ff00cc, #1a1a4a);
+            padding: 10px;
+            margin: 5px;
         }
 
         form {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            max-width: 400px;
-            width: 100%;
+            max-width: 100%;
         }
 
         input, textarea {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background: rgba(255, 255, 255, 0.8);
-            color: #0a0a2a;
+            padding: 6px;
         }
 
         button {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background: #00ffcc;
-            color: #0a0a2a;
-            font-size: 1.1em;
-            cursor: pointer;
-            transition: background 0.3s, transform 0.3s;
+            padding: 8px;
+            font-size: 0.9em;
         }
+    }
 
-        button:hover {
-            background: #ff00cc;
-            transform: scale(1.05);
+    @media (max-width: 400px) {
+        .gallery-grid {
+            grid-template-columns: 1fr;
         }
-
-        /* Scroll Snap */
-        html {
-            scroll-snap-type: y mandatory;
-            scroll-behavior: smooth;
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="stars"></div>
