--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         background: white;
         box-shadow: 100px 200px #fff, 300px 50px #fff, 500px 300px #fff, 700px 100px #fff, 
                     200px 400px #fff, 400px 600px #fff, 600px 200px #fff, 800px 500px #fff;
-        animation: twinkle 3s infinite;
+        animation: twinkle3s infinite;
     }
 
     @keyframes twinkle {
@@ -51,18 +51,18 @@
         position: fixed;
         top: 0;
         width: 100%;
-        padding: 15px;
+        padding: 10px;
         background: rgba(0, 0, 0, 0.7);
         z-index: 10;
         display: flex;
         justify-content: center;
-        flex-wrap: wrap;
+        align-items: center;
     }
 
     nav a {
         color: #fff;
         text-decoration: none;
-        margin: 10px 15px;
+        margin: 0 10px;
         font-size: 1.1em;
         transition: color 0.3s, transform 0.3s;
     }
@@ -75,7 +75,7 @@
     /* Sections */
     section {
         height: 100vh;
-        padding: 60px 15px;
+        padding: 70px 15px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -217,24 +217,30 @@
     /* Responsive Design for iPhone and Small Screens */
     @media (max-width: 600px) {
         nav {
-            padding: 10px;
+            padding: 8px;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            white-space: nowrap;
+            justify-content: flex-start;
         }
 
         nav a {
-            margin: 5px 10px;
-            font-size: 0.9em;
+            margin: 0 8px;
+            font-size: 0.85em;
         }
 
         section {
-            padding: 50px 10px;
+            padding: 60px 10px;
         }
 
         h1 {
-            font-size: 1.8em;
+            font-size: 1.5em;
+            margin-bottom: 10px;
         }
 
         p {
-            font-size: 0.9em;
+            font-size: 0.85em;
+            line-height: 1.5;
         }
 
         .gallery-grid {
@@ -266,6 +272,11 @@
     }
 
     @media (max-width: 400px) {
+        nav a {
+            margin: 0 6px;
+            font-size: 0.8em;
+        }
+
         .gallery-grid {
             grid-template-columns: 1fr;
         }
